# udp_camera

./: .clang-format  .gitignore  CMakeLists.txt  package.xml
calibration/: bottom.yaml  front.yaml
include/: buffer_manager.hpp  safe_queue.hpp  udp_server.hpp
src/: udp_camera.cpp
